# MinerviLism

./: .gitignore  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
minervini_stage/: __init__.py  app_streamlit.py  cli.py  indicators.py  io_utils.py  plotter.py  stage_rules.py  vcp.py
stage_app/: README.md  app.py  cli.py  requirements.txt  stage.py
tests/: golden_windows.yaml  test_fetch_price_data.py  test_indicators.py  test_io_utils.py  test_stage_rules.py  test_stages.py  test_vcp.py
tests/artifacts/: NVDA_1Y_continuity_debug.csv
